# skills-scanner-skill

./: .env.example  .gitignore  README.md  SKILL.md  copilot-skillset.yml  main.py  pyproject.toml  scan.sh
rules/: data_exfiltration.yar  malicious_code.yar  patterns.yml  prompt_injection.yar
scan_reports/: gstack_scan_20260327_160252.json  gstack_scan_20260327_160252_report.md
src/scanner/: __init__.py  aggregator.py  cli.py  dataflow_analyzer.py  llm_judge.py  models.py  pattern_detector.py  yara_detector.py
tests/: test_aggregator.py  test_dataflow_analyzer.py  test_pattern_detector.py  test_yara_detector.py
tests/fixtures/benign_llm_skill/: main.py
tests/fixtures/clean_skill/: main.py
tests/fixtures/exfil_skill/: main.py
tests/fixtures/injection_skill/: main.py
tests/fixtures/malicious_skill/: main.py
